# leo_ai

./: .gitignore  README.md  frequency_service.py  main.py  pyproject.toml  run.sh  tests.py
text_files/: example.txt
