[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Yoni Jacobi <yony@slatescience.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
